
Wed, 11 Feb 2009 15:00:48 +0100

	- Added patch by Jan Rouš <jaro@koukaam.se> to prevent rare segfault on
	  shutdown.

Wed, 25 Feb 2009 10:27:35 +0100

	- Added patch by Enrique Zanardi <ezanardi@atlantux.com> to let repair
	  binary know more about the failing test.
	- Expanded that patch to work for more tests.
	- Released version 5.5

Tue,  3 Mar 2009 14:59:55 +0100

	- Added patch by Enrique Zanardi <ezanardi@atlantux.com> to
	  check for the source of the ping reply packets.

Thu, 12 Mar 2009 14:36:01 +0100

	- Added patch by Lon Hohberger <lhh@redhat.com> to allow configuration
	  of timeouts.
	- Added another patch by Lon Hohberger <lhh@redhat.com> to make sure
	  signal handler does not call not-signal safe functions.
	- Made wd_keepalive accept all options watchdog accepts and not throw
	  errors on those it does not use itself.

Fri, 13 Mar 2009 12:26:40 +0100

	- Made watchdog not close the watchdog device so early when trying a
	  normal shutdown. This ensures a reset even if the system hangs while
	  doing this.
	- Applied patch by Richard W.M. Jones <rjones@redhat.com> to cleanup
	  code base for gcc-4.4.

Sun, 22 Mar 2009 14:33:21 +0100

	- Some more bugfixes by me and Lon.
	- Released 5.6

Mon, 25 May 2009 02:46:32 +0200

	- Allow config lines with arbitrary length.
	- Applied patch by Mike Frysinger to not use deprecated sys_siglist
	  anymore.
	- Also removed configure test for sys_siglist.
	- Cleaned up includes, also courtesy of Mike Frysinger.

Sun, 22 Nov 2009 14:05:29 +0100

	- Applied patch by Russell Coker <russell@coker.com.au> to sets the
	  socket handle for raw socket access to close on exec.

Wed, 06 Jan 2010 13:36:37 +0100

	- Applied patch by Russell Coker <russell@coker.com.au> to give a
	  better error message if no config file is found.
	- Released version 5.7.	

Fri, 08 Jan 2010 11:02:23 +0100

	- Applied patch by Min Zhang <mzhang@mvista.com> to make logdir a
	  configurable option.
